@@ -498,6 +498,8 @@ ICQPlugin::ICQPlugin(unsigned base, const char *cfg)
     eMenuSearch.process();
     Event eMenuGroups(EventMenuCreate, (void*)MenuIcqGroups);
     eMenuGroups.process();
+    Event eMenuCheckInvisible(EventMenuCreate, (void*)MenuCheckInvisible);
+    eMenuCheckInvisible.process();
 
     Command cmd;
     cmd->id          = CmdVisibleList;
@@ -575,6 +577,33 @@ ICQPlugin::ICQPlugin(unsigned base, const char *cfg)
     cmd->flags		 = COMMAND_CHECK_STATE;
     eCmd.process();
 
+    cmd->id			 = CmdCheckInvisibleAll;
+    cmd->text		 = I18N_NOOP("Check &invisible");
+    cmd->icon		 = "ICQ_invisible";
+    cmd->menu_id	 = MenuMain;
+    cmd->menu_grp	 = 0x2090;
+    cmd->popup_id	 = 0;
+    cmd->flags		 = COMMAND_CHECK_STATE;
+    eCmd.process();
+
+    cmd->id			 = CmdCheckInvisibleAll;
+    cmd->text		 = I18N_NOOP("&All");
+    cmd->icon		 = NULL;
+    cmd->menu_id	 = MenuCheckInvisible;
+    cmd->menu_grp	 = 0x2000;
+    cmd->popup_id	 = 0;
+    cmd->flags		 = COMMAND_DEFAULT;
+    eCmd.process();
+
+    cmd->id			 = CmdCheckInvisible;
+    cmd->text		 = I18N_NOOP("&Only invisible");
+    cmd->icon		 = NULL;
+    cmd->menu_id	 = MenuCheckInvisible;
+    cmd->menu_grp	 = 0x2001;
+    cmd->popup_id	 = 0;
+    cmd->flags		 = COMMAND_DEFAULT;
+    eCmd.process();
+
     registerMessages();
 
     RetrySendDND = registerType();
@@ -604,6 +633,12 @@ ICQPlugin::~ICQPlugin()
     Event eAllEncodings(EventCommandRemove, (void*)CmdAllEncodings);
     eAllEncodings.process();
 
+    Event eCheckInvisible(EventCommandRemove, (void*)CmdCheckInvisible);
+    eCheckInvisible.process();
+
+    Event eCheckInvisibleAll(EventCommandRemove, (void*)CmdCheckInvisibleAll);
+    eCheckInvisibleAll.process();
+
     Event eMenuEncoding(EventMenuRemove, (void*)MenuEncoding);
     eMenuEncoding.process();
 
@@ -612,6 +647,9 @@ ICQPlugin::~ICQPlugin()
 
     Event eMenuGroups(EventMenuRemove, (void*)MenuIcqGroups);
     eMenuGroups.process();
+
+    Event eMenuCheckInvisible(EventMenuRemove, (void*)MenuCheckInvisible);
+    eMenuCheckInvisible.process();
 }
 
 string ICQPlugin::getConfig()
