@@ -420,13 +420,7 @@ Package=<5>
 Package=<4>
 {{{
     Begin Project Dependency
-    Project_Dep_Name simremote
-    End Project Dependency
-    Begin Project Dependency
     Project_Dep_Name simctrl
-    End Project Dependency
-    Begin Project Dependency
-    Project_Dep_Name simipc
     End Project Dependency
 }}}
 
@@ -574,33 +568,6 @@ Package=<4>
 ###############################################################################
 
 Project: "simctrl"=.\plugins\remote\simctrl.dsp - Package Owner=<4>
-
-Package=<5>
-{{{
-}}}
-
-Package=<4>
-{{{
-}}}
-
-###############################################################################
-
-Project: "simipc"=.\PLUGINS\REMOTE\simipc.dsp - Package Owner=<4>
-
-Package=<5>
-{{{
-}}}
-
-Package=<4>
-{{{
-    Begin Project Dependency
-    Project_Dep_Name simremote
-    End Project Dependency
-}}}
-
-###############################################################################
-
-Project: "simremote"=.\plugins\remote\simremote.dsp - Package Owner=<4>
 
 Package=<5>
 {{{
